fix: broken light scenes API
Fix scene creation and deletion endpoints being shadowed, deletion not cascading, and creation not passing the sceneid into the database
